# repastSIR

./: MANIFEST.in  pyproject.toml  test.json
src/repastSIR/: SIR.py
src/repastSIR/input/: pars_box_norm_ground_truth.yaml  repastSIR_ground_truth.csv
src/repastSIR/tests/: test_cmd.py
